--- a/Views/Selecoes/CriarSelecao.cshtml
+++ b/Views/Selecoes/CriarSelecao.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Copa.Models.Selecao
 
 @{
-    ViewData["Title"] = "CriarSelecao";
+    ViewData["Title"] = "Cadastro";
 }
 
-<h2>CriarSelecao</h2>
-
-<h4>Selecao</h4>
+<h4>Seleção</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +16,14 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar <- </a>
 </div>
 
 @section Scripts {
